force-app/main/default/objects/Attendance__c/Attendance__c.object-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomObject>
    <description>This object represents data from the sign-in sheet to a class. One record per attendee.</description>
    <label>Attendance</label>
    <nameField>
        <displayFormat>att-{000000000}</displayFormat>
        <label>AttendanceId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>