force-app/main/default/objects/Attendance__c/fields/Date__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>