force-app/main/default/objects/Attendance__c/listViews/All.listView-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<ListView>
    <fullName>All</fullName>
    <columns>Participant__c</columns>
    <columns>Date__c</columns>
    <columns>Class__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>contains</operation>
        <value>rounds</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>lessThan</operation>
        <value>12/31/2017 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>